# PR2611

./: .gitignore  .pre-commit-config.yaml  PR2025-26_VMESNA_2611.pptx  README.md  VMESNO.md  osnutek.md  pyproject.toml
data/: notesOnData.md
docs/: VMESNO.md
src/anaLaySis/: formatData.py
src/analaysis/: format_data.py
src/analysis/: __init__.py  analysis_crime.ipynb  data_formatter.py  format_data.py  location_analysis.py  population.py
src/kz1/: __init__.py  main.py
src/project/: __main__.py  main.py
src/scraper/: main.py
