[project]
name = "PR-seminarska"
version = "0.1.0"
authors = [
    {name = "Matic Grobolšek"},
    {name = "Enej Tinauer"},
    {name = "Nika Kokalj"},
    {name = "Klara Pirc Makše"},
]
dependencies = [
    "scikit-learn>=1.8.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
]

requires-python = ">=3.12.11"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "mypy>=1.9.0",
    "ruff>=0.3.5",
    "pre-commit>=3.7.0",
    "pre-commit-hooks>=4.6.0"
]

[tool.ruff]
line-length = 140

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = ["S301", "D104", "G004", "TRY003", "EM101", "EM102"]

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["S101", "INP001"]

[tool.ruff.lint.pydocstyle]
convention = "google"
